--- a/packages/widget-univeral-rainie-toolbox-app/_template/app-webpack-react-kit/demos/home.html
+++ b/packages/widget-univeral-rainie-toolbox-app/_template/app-webpack-react-kit/demos/home.html
@@ -11,8 +11,15 @@
   <div id="container">
       <div class="c-loading">页面加载中...</div>
   </div>
-  <script src="/node_modules/react/umd/react.development.js"></script>
-  <script src="/node_modules/react-dom/umd/react-dom.development.js"></script>
+  <script src="//static-assets.cyt-rain.cn/assets/react.development.js"></script>
+  <script src="//static-assets.cyt-rain.cn/assets/react-dom.development.js"></script>
+  <script src="//static-assets.cyt-rain.cn/assets/prop-types.js"></script>
 
+  <% for (var index in htmlWebpackPlugin.files.js) { %>
+    <script
+       src="<%= htmlWebpackPlugin.files.js[index] %>"
+       crossorigin="anonymous"
+    ></script>
+  <% } %>
 </body>
 </html>
